; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/extr_ip_mroute.c_init_mfc_params.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/extr_ip_mroute.c_init_mfc_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mfc = type { i32, i64, i64, i64, i32, i32 }
%struct.mfcctl2 = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mfc*, %struct.mfcctl2*)* @init_mfc_params to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_mfc_params(%struct.mfc* %0, %struct.mfcctl2* %1) #0 {
  %3 = alloca %struct.mfc*, align 8
  %4 = alloca %struct.mfcctl2*, align 8
  store %struct.mfc* %0, %struct.mfc** %3, align 8
  store %struct.mfcctl2* %1, %struct.mfcctl2** %4, align 8
  %5 = load %struct.mfcctl2*, %struct.mfcctl2** %4, align 8
  %6 = getelementptr inbounds %struct.mfcctl2, %struct.mfcctl2* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.mfc*, %struct.mfc** %3, align 8
  %9 = getelementptr inbounds %struct.mfc, %struct.mfc* %8, i32 0, i32 5
  store i32 %7, i32* %9, align 4
  %10 = load %struct.mfcctl2*, %struct.mfcctl2** %4, align 8
  %11 = getelementptr inbounds %struct.mfcctl2, %struct.mfcctl2* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.mfc*, %struct.mfc** %3, align 8
  %14 = getelementptr inbounds %struct.mfc, %struct.mfc* %13, i32 0, i32 4
  store i32 %12, i32* %14, align 8
  %15 = load %struct.mfc*, %struct.mfc** %3, align 8
  %16 = load %struct.mfcctl2*, %struct.mfcctl2** %4, align 8
  %17 = call i32 @update_mfc_params(%struct.mfc* %15, %struct.mfcctl2* %16)
  %18 = load %struct.mfc*, %struct.mfc** %3, align 8
  %19 = getelementptr inbounds %struct.mfc, %struct.mfc* %18, i32 0, i32 3
  store i64 0, i64* %19, align 8
  %20 = load %struct.mfc*, %struct.mfc** %3, align 8
  %21 = getelementptr inbounds %struct.mfc, %struct.mfc* %20, i32 0, i32 2
  store i64 0, i64* %21, align 8
  %22 = load %struct.mfc*, %struct.mfc** %3, align 8
  %23 = getelementptr inbounds %struct.mfc, %struct.mfc* %22, i32 0, i32 1
  store i64 0, i64* %23, align 8
  %24 = load %struct.mfc*, %struct.mfc** %3, align 8
  %25 = getelementptr inbounds %struct.mfc, %struct.mfc* %24, i32 0, i32 0
  %26 = call i32 @timevalclear(i32* %25)
  ret void
}

declare dso_local i32 @update_mfc_params(%struct.mfc*, %struct.mfcctl2*) #1

declare dso_local i32 @timevalclear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
